--- a/src/CSS/sideMenu.css
+++ b/src/CSS/sideMenu.css
@@ -16,7 +16,7 @@
 }
 .sideMenuWrapper{
     overflow-x: hidden;
-    overflow-y: scroll;
+    overflow-y: auto;
     margin-bottom: 20px;
 }
 .sideMenuWrapperMain{
